2001-02-26  Dave Peticolas  <dave@krondo.com>

	* src/engine/gnc-engine-util.h: don't evaluate debug macro
	arguments unless it's going to be printed.

2001-02-25  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/Query.[ch]: added support for sorting by account
	names and codes, as well as names and codes for the "other" split
	in the transaction.  also, modified (xaccQuerySetSortIncreasing)
	so you can sort in different orders for the three criteria
	specified.

	* src/engine/Transaction.[ch]: Added new functions for comparing
	splits on account names and codes.

	* src/engine/reconcile-list.c (gnc_reconcile_list_set_sort_order):
	modified to use new query sorting interface.
	
	* src/scm/report/transaction-report-2.scm: New file.  Transaction
	report rewritten for our new improved HTML generator.  Most 
	functionality is now present, but the layout is "homely".  Will 
	fix later.

	* src/scm/report/transaction-report.scm: Old transaction report,
	removed.

	* src/scm/report/report-list.scm: added new transaction report.

	* src/scm/report-utilities.scm: modified for new query sorting
	interface.

	* src/doc/design/multicurrency.discussion.txt: The log of an IRC
	discussion between cstim and myself about his currency-collector
	code.  Included because it's the only documentation we have on
	this material.

	* src/doc/design/.cvsignore: ignore additional generated files.

2001-02-24  Rob Browning  <rlb@cs.utexas.edu>

	* configure.in (AC_ARG_ENABLE): add --enable-error-on-warning.
	Enables -Werror and whatever else is needed for super-strict
	checks.  I'm compiling with this now, and I urge everyone else to
	as well.  We do have a few aggravating things we still ignore,
	like unused variables, but as of today, the whole codebase
	compiles successfully with this turned on.
	(AC_CHECK_PROG): Add a check for etags.
	(AC_ARG_WITH): --with-perl-includes - don't die if CORE not found.
	I install modules in a local directory and use --perl-includes to